--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 //registry.npmjs.org/:_authToken=8c49b9e6-278c-46b8-b958-98d8513846d2
-init.author.name=
-init.author.email=
+init.author.name="Julian Johannesen"
+init.author.email="julian.johannesen@gmail.com"
