--- a/.netrc
+++ b/.netrc
@@ -4,3 +4,9 @@ machine learn-config
 machine flatiron-push
   login julianjohannesen
   password 252081
+machine api.heroku.com
+  login julian.johannesen@gmail.com
+  password e1f78b4e-3393-4295-88e1-6a6c372c269d
+machine git.heroku.com
+  login julian.johannesen@gmail.com
+  password e1f78b4e-3393-4295-88e1-6a6c372c269d
