--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,4 @@
-[core]
+#[core]
   whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
   excludesfile = ~/julian/.gitignore
 [alias]
@@ -37,7 +37,7 @@
   status = auto
   branch = auto
 [format]
-  pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
+#  pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
 [diff "ruby"]
   funcname = ^ *\\(\\(class\\|module\\|def\\) .*\\)
 [push]
@@ -50,3 +50,6 @@
   trustExitCode = true
 [merge]
   tool = opendiff
+[core]
+	whitespace = trailing-space,-space-before-tab,indent-with-non-tab,cr-at-eol
+	excludesfile = /home/julian/.gitignore_global
